a pile of code.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <pre id="board">
         </pre>
 
+        <input id="move" type="text" placeholder="0,0" value="0,0">
+
         <script src="out/goog/base.js" type="text/javascript"></script>
         <script src="go.js" type="text/javascript"></script>
         <script type="text/javascript">goog.require("go.core");</script>
